# lap

./: .gitignore  .gitmodules  CHANGELOG.md  ChangeLog.md  LICENSE  LICENSE-MIT  README.md  cuda_test_err.txt  cuda_test_out.txt  download_face_models.sh  download_models.py  download_models.sh  main.db  run.bat
.github/workflows/: deploy-docs.yml  hotfix-signed.yml  pr-build.yml  release-homebrew.yml  release-windows.yml  release.yml
docs/: index.md  package.json  pnpm-lock.yaml
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css  index.ts
docs/.vitepress/theme/components/: Fireworks.vue
docs/guide/: dedup-v1-design.md  getting-started.md  introduction.md
docs/guide/release-notes/: v0.1.0.md  v0.1.1.md  v0.1.11.md  v0.1.13.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.2.1.md  v0.2.4.md  v0.3.0.md
docs/i18n/: README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README.zh-CN.md
i18n/: README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README.zh-CN.md
scripts/: README.md  download_ffmpeg_sidecar.ps1  download_ffmpeg_sidecar.sh  download_models.ps1  download_models.sh
src/: index.html  main.js  styles.css
src-tauri/: .gitignore  Cargo.toml  build.rs  main.db-journal  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: _bak.rs  clipboard_linux.c  cmd.rs  db.rs  jpeg_shim.cpp  main.rs  pasteboard.mm  t_ai.rs  t_apple_sidecar.rs  t_civitai.rs  t_cluster.rs  t_cmds.rs  t_common.rs  t_config.rs  t_dedup.rs  t_face.rs  t_fetch_url.rs  t_heif.rs  t_http.rs  t_image.rs  t_jpeg.rs  t_jxl.rs  t_libraw.rs  t_migration.rs  t_pasteboard.rs  t_protocol.rs  t_reverse_prompt.rs  t_sqlite.rs  t_storage.rs  t_utils.rs  t_video.rs  utils.rs
src-vite/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.js
src-vite/src/: App.vue  AppLogic.js  _bak.ts  main.js  router.js  shims-vue.d.ts  style.css  tailwind.css  utils.ts
src-vite/src/assets/: app.css  dark.css  light.css  main.css  tailwind.css
src-vite/src/common/: _bak.ts  api.js  config.js  constants.ts  fileMenu.ts  icons.js  layout.ts  libraryMove.js  libraryMove.test.js  reversePrompt.js  reversePrompt.test.js  router.js  scanStatus.ts  shortcuts.ts  smartTags.ts  types.ts  updater.ts  utils.ts  video.ts
src-vite/src/components/: Album.vue  AlbumEdit.vue  AlbumFolder.vue  AlbumInfo.vue  AlbumList.vue  AlbumProfile.vue  Albums.vue  AlbumsFolders.vue  BackupDialog.vue  BatchOperation.vue  Calendar.vue  CalendarDaily.vue  CalendarMonth.vue  CalendarMonthly.vue  CalendarPane.vue  Camera.vue  CivitaiImport.vue  CollectionTray.vue  Content.vue  ContextMenu.vue  DedupPane.vue  DropDownMenu.vue  DropDownSelect.vue  Dropdown.vue  EditImage.vue  ExternalAppPicker.vue  Favorite.vue  FavoriteRatingControl.vue  FileConflictDialog.vue  FileInfo.vue  Files.vue  FolderPane.vue  FolderTree.vue  Folders.vue  GridView.vue  Home.vue  Image.old.vue  Image.vue  ImageEditor.vue  ImageHistogram.vue  (+47 more)
src-vite/src/composables/: useAlbumSelection.ts
src-vite/src/locales/: de.json  en.json  es.json  fr.json  ja.json  jp.json  ko.json  pt.json  ru.json  zh.json
src-vite/src/stores/: configStore.js  libraryStore.js  uiStore.js  windowStore.js
src-vite/src/test/: setup.js
src-vite/src/views/: About.vue  Home.vue  ImageEditor.vue  ImageView.vue  ImageViewer copy.vue  ImageViewer.vue  ImageViewer1.vue  Main.vue  PrintView.vue  ReversePrompter.vue  Settings.vue
src-vite/src/workers/: thumbnailWorkers.js
