[package]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
name = "Lap"
version = "0.1.0"
description = "A local-first, ai-powered photo manager built with Tauri + Vue 3."
homepage = "https://github.com/julyx10/lap"
authors = ["@liulichuan"]
edition = "2024"
license = "GPL-3.0-or-later"
exclude = ["main.db"]
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev.package."*"]
opt-level = 3

[dependencies]
tauri = { version = "2", features = [
    "macos-private-api",
    "protocol-asset",
    "devtools",
] }
tauri-plugin-window-state = "2.2.1"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = "2.2.0"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32.0", features = ["bundled", "collation"] }
chrono = "0.4"
kamadak-exif = "0.6.1"
reverse_geocoder = "4.1.1"
native-dialog = "0.7.0"
dirs = "5.0.1"
walkdir = "2.5.0"
trash = "3.0.0"
base64 = "0.22.1"
image = "0.25.6"
imagesize = "0.13.0"
ffmpeg-next = { version = "8.0.0", features = ["static", "build"] }
tokio = { version = "1.44.1", features = ["full"] }
opener = "0.7.2"
arboard = "3.5.0"
pinyin = "0.10.0"
once_cell = "1.21.3"
rand = "0.8"
ort = { version = "2.0.0-rc.9", features = ["download-binaries"] }
ndarray = "0.16"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
uuid = { version = "1", features = ["v4"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
