[package]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
name = "Lap"
version = "0.1.12"
description = "An offline-first photo manager for large local libraries."
homepage = "https://julyx10.github.io/lap"
repository = "https://github.com/julyx10/lap"
authors = ["julyx10 <tiangle@gmail.com>"]
edition = "2024"
license = "GPL-3.0-or-later"
build = "build.rs"

[build-dependencies]
cc = "1"
tauri-build = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.dev.package."*"]
opt-level = 3

[dependencies]
tauri = { version = "2", features = [
    "macos-private-api",
    "protocol-asset",
    "devtools",
] }
tauri-plugin-window-state = "2.4.1"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-aptabase = "1.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32.1", features = ["bundled", "collation"] }
chrono = "0.4"
kamadak-exif = "0.6.1"
reverse_geocoder = "4.1.1"
native-dialog = "0.7.0"
dirs = "5.0.1"
walkdir = "2.5.0"
trash = "3.3.1"
base64 = "0.22.1"
http = "1"
image = "0.25.10"
imagesize = "0.13.0"
tokio = { version = "1.50.0", features = ["full"] }
opener = "0.7.2"
arboard = "3.6.1"
pinyin = "0.10.0"
once_cell = "1.21.4"
rand = "0.8"
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["std", "ndarray", "download-binaries", "copy-dylibs"] }
ndarray = "0.16"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
uuid = { version = "1", features = ["v4"] }
blake3 = "1.8.3"

[target.'cfg(target_os = "windows")'.dependencies]
ffmpeg-next = { version = "8.1.0" }

[target.'cfg(not(target_os = "windows"))'.dependencies]
ffmpeg-next = { version = "8.1.0", features = ["static", "build"] }


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
